fix Context problem, (component used context was not wrapping with contextprovider

--- a/votingdapp/src/app/dvoting/votingroom/dvoting.module.css
+++ b/votingdapp/src/app/dvoting/votingroom/dvoting.module.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap');
 :root {
     --primary-color: #7b88c3; /* Warna ungu utama */
     --secondary-color: #e0e7ff; /* Warna latar belakang yang lebih terang */
@@ -28,6 +27,9 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     line-height: 1.6;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
 }
 
 html, body {
@@ -35,7 +37,7 @@ html, body {
 }
 
 .mainheader {
-    font-family: "Winky Sans", sans-serif;
+
     margin: 20px;
     padding: 20px;
     padding-left: 40px;
@@ -44,6 +46,7 @@ html, body {
     box-shadow: 10px 10px;
     border: 3px solid black;
     background-color: white;
+
 }
 
 .overlapButton {
@@ -65,15 +68,17 @@ html, body {
     border-radius: 10px;
     cursor: pointer;
     border: 3px solid black;
-    font-family: "Winky Sans", sans-serif;
     font-size: 16px;
+    font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 
 .navigator:hover, .walletconnection:hover {
     width: 140px;
     margin-left: -4px; /* supaya tidak tumpang tindih saat hover */
-  z-index: 2; /* naik ke atas */
+    z-index: 2; /* naik ke atas */
 }
 
 .navigator:active, .walletconnection:active {
@@ -92,7 +97,6 @@ html, body {
     padding: 4px;
     border-radius: 5px;
     color: black;
-    font-family: "Winky Sans", sans-serif;
     background-color: white;
 }
 
@@ -103,6 +107,8 @@ html, body {
 .dropdownview {
     display: none;
 }
+
+
 
 @media (max-width: 668px) {
     .mainheader 
